--- a/Facebook-Login-Test/templates/login.html
+++ b/Facebook-Login-Test/templates/login.html
@@ -1,5 +1,5 @@
 
-<section class="container-fluid main-section" id="login">
+<section class="container-fluid main-section" id="login-page">
     <!-- Log in form -->
 
     <div class="container">
@@ -8,23 +8,22 @@
                 <form role="form" class="form-sign">
                     <fieldset id="sign-in">
                         <h2>Please Sign In</h2>
+                        <div id="invalid-name-or-pass" class="row" hidden>
+                            <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Invalid username or password!</i>
+                        </div>
                         <div class="form-group">
                             <input type="text" name="text" id="email" class="form-control input-lg username" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" id="password" class="form-control input-lg password" placeholder="Password">
                         </div>
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <a href="#/auth" id="sign-in-btn" type="submit" class="btn btn-lg btn-success btn-block">Sign in</a>
+                        <div class="row text-center">
+                            <div class="col-md-6 col-md-offset-3">
+                                <button  id="login-btn" class="btn btn-lg btn-success btn-block">Sign in</button>
                             </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <input type="submit" id="registration-btn" class="btn btn-lg btn-primary btn-block" value="Registration">
-                            </div>
+
                         </div>
-                        <div id="invalid-name-or-pass" class="row" style="display: none">
-                            <i> Invalid username or password!</i>
-                        </div>
+                        
                     </fieldset>
                 </form>
             </div>
