--- a/Facebook-Login-Test/templates/registration.html
+++ b/Facebook-Login-Test/templates/registration.html
@@ -18,7 +18,7 @@
                             <input type="text" name="site" id="site" class="form-control input-lg construction-site" placeholder="Construction Site">
                         </div>
                         <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
+                            <div class="col-md-6 col-md-offset-3">
                                 <button id="form-registration-btn" class="btn btn-lg btn-primary btn-block">REGISTER</button>
                             </div>
                         </div>
